--- a/src/core/tailwind/tailwind.css
+++ b/src/core/tailwind/tailwind.css
@@ -7,8 +7,8 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
-    /* @apply font-sans antialiased bg-background text-foreground; */
+    /* @apply bg-background text-foreground; */
+    @apply font-sans antialiased bg-background text-foreground;
   }
 }
 
